# python-exercism

./: .gitignore  Dockerfile  README.md  docker-compose.yml
exercises/ghost-gobble-arcade-game/: arcade_game.py
python/: pyproject.toml
python/currency-exchange/: exchange.py
python/currency-exchange/.exercism/: metadata.json
python/ghost-gobble-arcade-game/.exercism/: metadata.json
