[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.275"
pytest = "7.4.0"

[tool.ruff]
select = ["E", "F", "N"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
